Fix vertical overflow

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -12,7 +12,7 @@ html {
 body {
   display: flex;
   flex-direction: column;
-  overflow-y: scroll;
+  overflow-y: auto;
   padding: 0;
   margin: 0;
   flex: 1;
